# stoneage

./: CSA.sql  說明.txt
客戶端lua文件/: list.lua  title.lua
客戶端lua文件/map/: battlemap.lua
客戶端lua文件/win/: 1020.lua  1021.lua  1022.lua  1023.lua  1024.lua
服務器端lua文件/ablua/: equipeffectfunction.lua  familyridefunction.lua  freecharlogin.lua  freecharlogout.lua  freechartitle.lua  freecomplianceparameter.lua  freelogincheck.lua  freemodeexp.lua  freesamenu.lua
服務器端lua文件/ablua/item/: attcteffect.lua  itemMax.lua  opentrump.lua
服務器端lua文件/ablua/magic/: addpaypoint.lua  addvippoint.lua  announce.lua  attackeffect.lua
服務器端lua文件/ablua/other/familybadge/: init.lua
服務器端lua文件/lua/: init.lua
服務器端lua文件/lua/onlineshop/: main.lua  shop2.txt
石器時代8.5客戶端最新源代碼/石器源碼/: CharTitle.cpp  CharTitle.h  redMemoy.cpp
石器時代8.5客戶端最新源代碼/石器源碼/mylua/: data.cpp  sa.cpp  win.cpp  winlua.cpp
石器時代8.5客戶端最新源代碼/石器源碼/newproto/: autil.cpp  protocol.cpp  protocol.h
石器時代8.5客戶端最新源代碼/石器源碼/oft/: oft.cpp  sys2.h  vg410.h
石器時代8.5客戶端最新源代碼/石器源碼/ohta/: ohta.cpp
石器時代8.5客戶端最新源代碼/石器源碼/other/: ItemsMall.cpp  ItemsMall.h  PtternSeparationBin.cpp  getip.cpp  md5_encrypt.h
石器時代8.5客戶端最新源代碼/石器源碼/system/: CharSignDay.cpp  SDLDraw.cpp  Turntable.cpp  action.cpp  ai_setting.cpp  battlemap.cpp  battlemenu.cpp  battleproc.cpp  character.cpp  chat.cpp  directdraw.cpp  field.cpp  font.cpp  gamemain.cpp  gemini.cpp  handletime.cpp  help.cpp  ime.cpp  loadrealbin.cpp  loadsprbin.cpp  login.cpp  lssproto_cli.cpp  lssproto_util.cpp  magicitem.cpp  main.cpp  map.cpp  math2.cpp  menu.cpp  menu2.cpp  mouse.cpp  netmain.cpp  netproc.cpp  onlinegm.cpp  pattern.cpp  pc.cpp  phonemsg.cpp  process.cpp  produce.cpp  radar.cpp  savedata.cpp  (+9 more)
石器時代8.5客戶端最新源代碼/石器源碼/systeminc/: CharSignDay.h  EncryptClient.h  SDLDraw.h  Turntable.h  action.h  anim_tbl.h  battlebcdeb.h  battlemap.h  battlemapname.h  battlemenu.h  battleproc.h  character.h  chat.h  directdraw.h  field.h  font.h  handletime.h  loadrealbin.h  loadsprbin.h  login.h  lssproto_cli.h  magicitem.h  main.h  map.h  math2.h  menu.h  mouse.h  netmain.h  netproc.h  onlinegm.h  palname.h  pc.h  petname.h  process.h  produce.h  radar.h  savedata.h  shop.h  sndcnf.h  sprdisp.h  (+6 more)
石器時代8.5客戶端最新源代碼/石器源碼/wgs/: Ping.cpp  Ping.h  common.cpp  message.cpp  message.h  reproc.cpp  tea.cpp  tea.h
石器時代服務器端最新完整源代碼/gmsv/: CMakeLists.txt  buf.c  callfromac.c  callfromcli.c  configfile.c  const.c  epollnet.c  function.c  gmset.txt  handletime.c  init.c  link.c  log.c  longzoro.h  longzoro.sh  lssproto_serv.c  main.c  md5.c  msignal.c  net.c  object.c  saacproto_cli.c  test.sh  util.c  vip_1.sh  vip_10.sh  vip_11.sh  vip_12.sh  vip_13.sh  vip_14.sh  vip_15.sh  vip_16.sh  vip_17.sh  vip_18.sh  vip_19.sh  vip_2.sh  vip_20.sh  vip_21.sh  vip_22.sh  vip_23.sh  (+32 more)
石器時代服務器端最新完整源代碼/gmsv/battle/: CMakeLists.txt  battle.c  battle_ai.c  battle_command.c  battle_event.c  battle_item.c  battle_magic.c  makefile  pet_skill.c  profession_skill.c
石器時代服務器端最新完整源代碼/gmsv/char/: CMakeLists.txt  addressbook.c  char.c  char_angel.c  char_base.c  char_data.c  char_event.c  char_item.c  char_party.c  char_talk.c  char_walk.c  chatmagic.c  chatroom.c  encount.c  enemy.c  event.c  family.c  makefile  pet.c  pet_event.c  petmail.c  skill.c  title.c  trade.c
石器時代服務器端最新完整源代碼/gmsv/include/: anim_tbl.h  battle.h  battle_ai.h  battle_item.h  char.h  char_base.h  chatmagic.h  common.h  configfile.h  correct_bug.h  encount.h  enemy.h  epollnet.h  family.h  handletime.h  item.h  item_event.h  link.h  log.h  longzoro.h  lssproto_serv.h  magic_base.h  mclient.h  md5.h  net.h  npc_door.h  npc_eventaction.h  npc_lua.h  npc_lua_interface.h  npc_magiccard.h  npc_roomadminnew.h  npc_scheduleman.h  npc_stoneserviceman.h  npccreate.h  npcgen.h  npctemplate.h  npcutil.h  object.h  pet.h  pet_skill.h  (+10 more)
石器時代服務器端最新完整源代碼/gmsv/include/longzoro/: debug.h  longzoro.h  newshop.h  version.h
石器時代服務器端最新完整源代碼/gmsv/include/mylua/: base.h
石器時代服務器端最新完整源代碼/gmsv/item/: CMakeLists.txt  item.c  item_event.c  item_gen.c  makefile
石器時代服務器端最新完整源代碼/gmsv/longzoro/: CMakeLists.txt  crypto.c  luckstar.c  makefile  move.c  newshop.c  playerquestion.c  sasql_linux.c
石器時代服務器端最新完整源代碼/gmsv/lua/: lua.h
石器時代服務器端最新完整源代碼/gmsv/magic/: CMakeLists.txt  magic.c  magic_base.c  magic_field.c  makefile
石器時代服務器端最新完整源代碼/gmsv/map/: CMakeLists.txt  makefile  map_warppoint.c  readmap.c
石器時代服務器端最新完整源代碼/gmsv/mylua/: CMakeLists.txt  ablua.c  battlebase.c  charbase.c  enemytempbase.c  family.c  function.c  init.c  itembase.c  lssprotobase.c  magicbase.c  makefile  mapbase.c  mylua.c  netbase.c  npcbase.c  objectbase.c  offlinebase.c  otherbase.c  petskill.c  profession_skill.c
石器時代服務器端最新完整源代碼/gmsv/npc/: CMakeLists.txt  makefile  npc_action.c  npc_airplane.c  npc_alldoman.c  npc_autopk.c  npc_bankman.c  npc_bodylan.c  npc_bus.c  npc_charm.c  npc_checkman.c  npc_dengon.c  npc_door.c  npc_doorman.c  npc_duelranking.c  npc_eventaction.c  npc_exchangeman.c  npc_familyman.c  npc_fmchallenge.c  npc_fmdengon.c  npc_fmhealer.c  npc_fmletter.c  npc_fmpkcallman.c  npc_fmpkman.c  npc_fmwarpman.c  npc_freepetskillshop.c  npc_gamblebank.c  npc_gamblemaster.c  npc_gambleroulette.c  npc_healer.c  npc_itemchange.c  npc_itemshop.c  npc_janken.c  npc_luckyman.c  npc_magiccard.c  npc_makepair.c  npc_manorsman.c  npc_mic.c  npc_msg.c  npc_newnpcman.c  (+34 more)
石器時代服務器端最新完整源代碼/gmsv/npc_lua/: CMakeLists.txt  ReadMe.txt  npc_lua.c  npc_lua_battle.c  npc_lua_char.c  npc_lua_ex.c  npc_lua_game.c  npc_lua_item.c  npc_lua_map.c  npc_lua_nl.c  npc_lua_nlg.c  npc_lua_spell.c  stdafx.cpp  stdafx.h  targetver.h
石器時代服務器端最新完整源代碼/saac/: .main.c.swp  CMakeLists.txt  acfamily.c  attestation.c  char.c  db.c  lock.c  mail.c  main.c  makefile  recv.c  saacproto_serv.c  sasql_bbs.c  sasql_cygwin.c  sasql_linux.c
石器時代服務器端最新完整源代碼/saac/include/: acfamily.h  char.h  mac.h  recv.h  saacproto_serv.h  version.h
